# mi_toolbox/pyproject.toml

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mi_toolbox"
version = "0.1.0"
description = "My Mechanistic Interpretability Toolbox"
authors = [
  { name="Lasse Marten Jantsch", email="your.email@example.com" },
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "torch",
    "numpy",
    # Add other libraries you use here
]

# This section is critical for the 'src' layout
[tool.setuptools.packages.find]
where = ["src"]